--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "todo-client",
+  "name": "quiz-client",
   "version": "1.0.0",
-  "description": "A simple Todo web client",
+  "description": "A simple Quiz web client",
   "license": "MIT",
   "scripts": {
     "start": "webpack --mode development --watch",
