--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "todo-server",
+  "name": "quiz-server",
   "version": "1.0.0",
-  "description": "A simple Todo REST server",
+  "description": "A simple Quiz REST server",
   "license": "MIT",
   "scripts": {
     "start": "nodemon src/server.js --exec \"babel-node --require ./src/config\"",
