--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
   "printWidth": 100,
-  "proseWrap": always,
-  "singleQuote": true
+  "proseWrap": "always",
+  "singleQuote": true,
+  "trailingComma": "all"
 }
