--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "axios": "^0.21.0",
+    "react-overlays": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-simplified": "^2.0.1"
   },
