--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,9 @@
   ],
   "dependencies": {
     "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "react-bootstrap": "^1.4.0",
+    "react-dropdown": "^1.9.0",
     "react-overlays": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-simplified": "^2.0.1"
