--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon src/server.js --exec \"babel-node --require ./src/config\"",
-    "test": "jest --setupFiles ./test/config"
+    "test": "jest --setupFiles ./test/config",
+    "testfile": "jest"
   },
   "browserslist": [
     "maintained node versions"
