--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dropdown": "^1.9.0",
     "react-overlays": "^4.1.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-simplified": "^2.0.1"
   },
