--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "axios": "^0.21.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "react-rating-stars-component": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
